postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    name: postgres-pod
    app: demo-voting-app

spec:
  containers:
  - name: postgres
    image: postgres:latest
    ports:
    - containerPort: 5432
