redis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    name: redis-pod
    app: demo-voting-app

spec:
  containers:
  - name: redis
    image: redis:latest
    ports:
    - containerPort: 6379
