worker-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: worker-app-pod
  labels:
    name: worker-app-pod
    app: demo-voting-app

spec:
  containers:
  - name: worker-app
    image: docker pull dockersamples/examplevotingapp_worker
