load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: demo-voting-app

spec:
  type: LoadBalancer
  ports:
  - ports: 80
    targetPort: 80
  selector:
    name: voting-app-pod
    app: demo-voting-app
