redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis-service
    app: demo-voting-app

spec:
  ports:
  - ports: 6379
    targetPort: 6379
  selector:
    name: redis-pod
    app: demo-voting-app
