result-service.yml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    name: result-service
    app: demo-voting-app

spec:
  type: LoadBalancer
  ports:
  - ports: 80
    targetPort: 80
  selector:
    name: result-app-pod
    app: demo-voting-app
